<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_x3_5"
    android:paddingLeft="@dimen/dimen_x3_5"
    android:paddingRight="@dimen/dimen_x3_5">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_28"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_recommendation_1"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dimen_x3_5"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x2_5"
                android:fontFamily="serif"
                android:text="@string/recommendation_1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_recommendation_2"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dimen_x3_5"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x2_5"
                android:fontFamily="serif"
                android:text="@string/recommendation_2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_recommendation_3"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dimen_x3_5"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_x2_5"
                android:fontFamily="serif"
                android:text="@string/recommendation_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signature_ojo_vial"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dimen_x3_5"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>